# ethraa

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: AWNDatabaseManagement.py  app.py  result_model.py  settings.py
app/pipeline/stages/api/: rest_api.py
app/pipeline/stages/api/model/: create_body.py  search_result.py
app/pipeline/stages/crawler/: crawler.py
app/pipeline/stages/llm/: llm_bard.py  llm_tagger.py
app/pipeline/stages/nlp/: arabic_wordnet.py  nlp.py  nltk_wordnet.py
app/pipeline/stages/nlp/ontology/: nltk_wordnet.py
app/pipeline/stages/translate/: translate.py
notebooks/: crawler.ipynb  farasa.ipynb  llm.ipynb  nlp.ipynb  translation.ipynb
